[package]
name = "toolx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0"
tempfile = "3.2.0"
regex = "1.0.0"
serde_json= "1.0.0"
ansi_term = "0.12.1"
chrono = "0.3.0"
percent-encoding = "2.0.0"